# python-project

./: .gitignore  .pre-commit-config.yaml  Justfile  Makefile  README.md  dev-requirements.in  dev-requirements.txt  justfile  mkdocs.yml  pyproject.toml  requirements.in  requirements.txt  scratch.py  setup.cfg
.github/workflows/: codeql-analysis.yml  python-check.yml
docs/: api-reference.md  conf.py  index.md  requirements.in  requirements.txt
docs/api/: app.md  helpers.md  index.md
docs/references/: api.md
docs/wiki/: customize.md  faqs.md  howto.md  pyenv.md
myapp/: __init__.py  __main__.py  requirements.in  requirements.txt
myhelpers/: __init__.py  dummy.py  requirements.in  requirements.txt
myhelpers/primitives/: __init__.py  envvar.py  singleton.py
mypackage/: __init__.py  __main__.py  requirements.txt
myutils/: dummy.py  requirements.txt
src/myapp/: __init__.py  __main__.py  logging.conf.toml
src/myhelpers/: __init__.py  dummy.py
src/myhelpers/primitives/: __init__.py  envvar.py  logging.py  singleton.py
tests/: test_dummy.py
