[project]
name = "My Project"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"

[[project.authors]]
name = "Your Name"
email = "you@example.com"

[tool.sphinx-pyproject]
copyright = "2022, Your Name"
extensions = [
    "sphinx.ext.autodoc",
    "sphinx.ext.napoleon",
    "sphinx.ext.viewcode",
    "sphinx.ext.todo",
    "sphinx.ext.intersphinx",
    "sphinx.ext.autosectionlabel",
    "sphinx.ext.graphviz",
    "sphinx.ext.inheritance_diagram",
    "myst_parser",
]
templates_path = ["_templates"]
exclude_patterns = ["_build", "Thumbs.db", ".DS_Store"]
html_theme = "furo"
html_static_path = ["_static"]

[tool.poetry]
# Duplicated from [project] section because poetry has not yet supported
name = "my-project"
version = "0.1.0"
description = ""
readme = "README.md"
license = "Apache-2.0"
authors = ["Your Name <you@example.com>"]

[[tool.poetry.packages]]
include = "myhelpers"
from = "src"

[[tool.poetry.packages]]
include = "myapp"
from = "src"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
more-itertools = "^10.2.0"
python-dotenv = "^1.0.1"
rich = "^13.7.0"
structlog = "^24.1.0"
tomli = "^2.0.1"
tqdm = "^4.66.2"
typing-extensions = "^4.10.0"

[tool.poetry.group.docs.dependencies]
furo = ">=2024.1.29"
myst-parser = ">=2.0.0"
sphinx = ">=7.2.6"
sphinx-autobuild = ">=2024.2.4"
sphinx-pyproject = ">=0.3.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.1"
flake8 = "^7.0.0"
flake8-bugbear = "^24.2.6"
flake8-commas = "^2.1.0"
flake8-import-order = "^0.18.2"
jupyterlab = "^4.1.1"
pycodestyle = "^2.11.1"
pyflakes = "^3.2.0"
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
pytest-icdiff = "^0.9"
pytest-sugar = "^1.0.0"
pytest-xdist = "^3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
