[project]
name = "My Project"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"

[[project.authors]]
name = "Your Name"
email = "you@example.com"

[tool.ruff]
extend-exclude = ["venv", ".venv"]
extend-include = ["*.ipynb"]
line-length = 120
required-version = ">=0.3.4"
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.format]
line-ending = "lf"
quote-style = "preserve"
skip-magic-trailing-comma = true

[tool.ruff.lint]
ignore = ["COM812", "ISC001"]
select = [
    "F", "E", "W", "C90", "I", "UP", "ASYNC",
    "S", "BLE", "FBT003", "B", "A", "COM", "C4", "FA",
    "ISC", "ICN", "G", "PT", "RSE", "RET", "SLOT",
    "SIM101", "SIM105", "SIM107", "SIM110", "SIM113",
    "SIM115", "SIM117", "SIM118", "SIM2", "SIM3",
    "SIM4", "SIM9", "TID", "TCH", "PTH", "PD", "PGH",
    "PL", "FLY", "PERF", "RUF",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true
mypy-init-return = true

[tool.ruff.lint.flake8-gettext]
extend-function-names = ["ugettetxt"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
datetime = "dt"

[tool.ruff.lint.flake8-quotes]
avoid-escape = false

[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["typing", "typing_extensions"]
strict = true

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.isort]
case-sensitive = true
required-imports = ["from __future__ import annotations"]
split-on-trailing-comma = false

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.pylint]
max-args = 8

[tool.mypy]
python_version = "3.12"
overrides = [
    { module = "logging.*", ignore_errors = true },
]

[tool.sphinx-pyproject]
copyright = "2022, Your Name"
extensions = [
    "sphinx.ext.autodoc",
    "sphinx.ext.napoleon",
    "sphinx.ext.viewcode",
    "sphinx.ext.todo",
    "sphinx.ext.intersphinx",
    "sphinx.ext.autosectionlabel",
    "sphinx.ext.graphviz",
    "sphinx.ext.inheritance_diagram",
    "myst_parser",
]
templates_path = ["_templates"]
exclude_patterns = ["_build", "Thumbs.db", ".DS_Store"]
html_theme = "furo"
html_static_path = ["_static"]

[tool.poetry]
# Duplicated from [project] section because poetry has not yet supported
name = "my-project"
version = "0.1.0"
description = ""
readme = "README.md"
license = "Apache-2.0"
authors = ["Your Name <you@example.com>"]

[[tool.poetry.packages]]
include = "myhelpers"
from = "src"

[[tool.poetry.packages]]
include = "myapp"
from = "src"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
more-itertools = "^10.2.0"
python-dotenv = "^1.0.1"
rich = "^13.7.0"
structlog = "^24.1.0"
tomli = "^2.0.1"
tqdm = "^4.66.2"
types-tqdm = "^4.66.0"
typing-extensions = "^4.10.0"

[tool.poetry.group.docs.dependencies]
furo = ">=2024.1.29"
myst-parser = ">=2.0.0"
sphinx = ">=7.2.6"
sphinx-autobuild = ">=2024.2.4"
sphinx-pyproject = ">=0.3.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.1"
jupyter-console = "^6.6.3"
jupyterlab = "^4.1.1"
mypy = "^1.9.0"
mypy-extensions = "^1.0.0"
notebook = "^7.1.2"
pycodestyle = "^2.11.1"
pyflakes = "^3.2.0"
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
pytest-icdiff = "^0.9"
pytest-sugar = "^1.0.0"
pytest-xdist = "^3.5.0"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
