[project]
name = "My Project"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"

[[project.authors]]
name = "Your Name"
email = "you@example.com"

[tool.ruff]
extend-exclude = ["venv", ".venv"]
extend-include = ["*.ipynb"]
line-length = 120
required-version = ">=0.3.4"
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.format]
line-ending = "lf"
quote-style = "preserve"
skip-magic-trailing-comma = true

[tool.ruff.lint]
ignore = ["COM812", "ISC001", "RET505", "RET506", "RET507", "RET508"]
select = [
    "F", "E", "W", "C90", "I", "UP", "ASYNC", "S", "FBT003", "B", "A",
    "COM", "C4", "FA", "ISC", "ICN", "G", "PT", "RSE", "RET", "SLOT",
    "SIM101", "SIM105", "SIM107", "SIM110", "SIM113", "SIM115", "SIM117",
    "SIM118", "SIM2", "SIM3", "SIM4", "SIM9", "TID", "TCH", "PTH", "PD", "PGH",
    "PL", "FLY", "PERF", "RUF",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true
mypy-init-return = true

[tool.ruff.lint.flake8-gettext]
extend-function-names = ["ugettetxt"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
datetime = "dt"

[tool.ruff.lint.flake8-quotes]
avoid-escape = false

[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["typing", "typing_extensions"]
strict = true

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.isort]
case-sensitive = true
required-imports = ["from __future__ import annotations"]
split-on-trailing-comma = false

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.pylint]
max-args = 8

[tool.pyright]
pythonVersion = "3.12"

[tool.poetry]
# Duplicated from [project] section because poetry has not yet supported
name = "my-project"
version = "0.1.0"
description = ""
readme = "README.md"
license = "Apache-2.0"
authors = ["Your Name <you@example.com>"]

[[tool.poetry.packages]]
include = "myhelpers"
from = "src"

[[tool.poetry.packages]]
include = "myapp"
from = "src"

[tool.poetry.dependencies]
python = "^3.12"
attrs = "^23.2.0"
click = "^8.1.7"
more-itertools = "^10.2.0"
prompt-toolkit = "^3.0.43"
python-dotenv = "^1.0.1"
rich = "^13.7.1"
textual = "^0.56.0"
tomli = "^2.0.1"
tqdm = "^4.66.3"
types-tqdm = "^4.66.0"
typing-extensions = "^4.11.0"

[tool.poetry.group.docs.dependencies]
mkdocs-glightbox = "^0.3.7"
mkdocs-material = { version = ">=9.5.17", extras = ["imaging"] }
mkdocstrings = { version = ">=0.24.3", extras = ["python"] }
pygments = "^2.17.2"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.4"
jupyter-console = "^6.6.3"
jupyterlab = "^4.1.5"
pyright = "^1.1.357"
notebook = "^7.1.2"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-icdiff = "^0.9"
pytest-sugar = "^1.0.0"
pytest-xdist = "^3.5.0"
ruff = "^0.3.5"
ruff-lsp = "^0.0.53"
textual-dev = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
